--- a/config.toml
+++ b/config.toml
@@ -1,3 +1,5 @@
-baseURL = 'https://example.org/'
+baseURL = "/"
 languageCode = 'en-us'
 title = 'My New Hugo Site'
+relativeURLs = true
+uglyURLs = true
